2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* drag.cc,exult.cc,gamewin.h: fixed gump buttons passing clicks to underlying items
	* cheat.h/cc: made most member functions const

2000-11-24  Max Horn  <max@quendi.de>
	* objs.cc: added find_nearby_eggs() and find_nearby_actors()
	* changed various locations to use these methods instead of find_nearby()
	* files/*.cc: removed unused method retrieve(int objnum,const char *)
	* files/*.cc: retrieve() does not return anything anymore but throws exceptions
	* exceptions.h: collected all exception related stuff into one header file
	* palette.cc: Palette::load() does throw an exception instead of returning an int

2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.cc: fix for Test of Love conv. bug. See mailing list.

2000-11-25  Dancer Vesperman <dancer@users.sourceforge.net>
	* audio/Audio.cc: Remove some cruft that used to support the ring-buffers. Should prevent occasional SDL breakage.

2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* utils.cc: fixed allocation bugs in get_system_path()

2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* game.cc: wait_delay() now handles all waiting events, instead of just one

2000-11-24  Dancer Vesperman <dancer@users.sourceforge.net>
	* audio/Audio.cc: Remove a redundant assignment

2000-11-24  Dancer Vesperman <dancer@users.sourceforge.net>
	* Adjust the initial window size for ProducerConsumerBufs

2000-11-24  Dancer Vesperman <dancer@users.sourceforge.net>
	* GLOBAL: Eliminate the global audio pointer.
	* Complete conversion of audio subsystem to self-initialising, self-managing singleton object
	* Update all audio references.
	* Change mixer and midi subsystem construction/destruction.
	* Remove default initialiser code for Audio
	* Allow multiple variant initialisation for Audio subsystem
	* Base calculations on actual values adopted by the SDL/hardware layer